pkg/platform/src/templates/k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-deployment
  namespace: dummy-namespace
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 30%
      maxUnavailable: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dummy-deployment
  template:
    metadata:
      labels:
        app: dummy-deployment
    spec:
      restartPolicy: Always
      containers:
      - name: dummy-container
        image: docker.io/traefik/whoami
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "1"
        startupProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - "random_exec_command"
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 60
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 60
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 60
          failureThreshold: 3
        volumeMounts:
        - name: data-volume
          mountPath: /usr/data
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: data-pvc
