pkg/platform/src/templates/k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-clusterip-service
  namespace: my-namespace
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
