pkg/platform/src/templates/k8s/manifests/github-pipeline.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-ingress
  namespace: tekton-builds
  annotations:
    kubernetes.io/ingress.class: ingress
spec:
  rules:
    - http:
        paths:
          - path: /tekton-github
            pathType: Prefix
            backend:
              service:
                name: el-github-listener
                port:
                  number: 8080
