pkg/platform/src/templates/k8s/manifests/gitlab-pipeline.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-ingress
  namespace: tekton-builds
  annotations:
    kubernetes.io/ingress.class: ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
    traefik.ingress.kubernetes.io/router.middlewares: hanzo-security-headers@kubernetescrd,tekton-gitlab-stripprefix@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /tekton-gitlab
            pathType: Prefix
            backend:
              service:
                name: el-gitlab-listener
                port:
                  number: 8080
